src/objects/DCA_Filter__c.object
<CustomObject>
    <fields>
        <fullName>DCA_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCA Manager</label>
        <referenceTo>DCA_Manager__c</referenceTo>
        <relationshipLabel>DCA Filters</relationshipLabel>
        <relationshipName>DCA_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DCA Filter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCAF-{0000}</displayFormat>
        <label>DCA Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCA Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>